--- a/index.css
+++ b/index.css
@@ -31,14 +31,52 @@ body {
 
 .wallpaper {
   width: 400px;
+  position=static
 }
 
 .container {
     width: 960px;
     margin: 0 auto;
+    text-decoration:none;
 }
 .mansion {
   width: 300px
 }
 
 
+.trailer {
+  width:500;
+}
+
+.picture_title {
+  width: 250px;
+  margin:;
+}
+
+nav li {
+    display: inline;
+    text-align: center;
+}
+
+nav a:hover{
+  color: red
+   ;
+}
+
+
+body li:hover{
+  color: black;
+}
+
+div {
+    text-decoration:none;
+}
+
+nav li a {
+    text-decoration: none;
+    color:black;
+}
+
+.active {
+  font-weight: 900;
+}
