--- a/How-to-Survive.css
+++ b/How-to-Survive.css
@@ -62,7 +62,7 @@ nav li {
 }
 
 nav a:hover{
-  color: red
+  color:  #A97D5D
    ;
 }
 
@@ -77,11 +77,25 @@ div {
 
 nav li a {
     text-decoration: none;
-    color: #0066FF;
+    color: #5C755E;
 }
 
 .active {
   font-weight: 900;
+}
+
+.fade {
+  position: fixed;
+  top:0px;
+  right:0;
+  left:0;
+  top:0;
+  margin-left: auto;
+  margin-right:auto;
+  width:auto;
+  height:50px;
+  text-align:center;
+  background-color: #F7DCB4;
 }
 
 
@@ -99,4 +113,19 @@ body {
   background-image: url(http://i.imgur.com/SWQZQSN.png);
   background-size: 100px 100px;
   
+}
+
+div.fixed {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 150px;
+    border: 3px solid black;
+    background-color: white;
+}
+
+.container {
+  border-style:solid;
+  border-bottom-width:200px;
+  border-color:transparent;
 }
