--- a/hostile-mobs.css
+++ b/hostile-mobs.css
@@ -84,18 +84,22 @@ nav li {
 }
 
 nav a:hover{
-  color: red
+  color:  #A97D5D
    ;
 }
 
-nav li a{
-  text-decoration: none;
-  color:  #0066FF;
+
+body li:hover{
+  color: #0066FF;
 }
 
 div {
-  text-decoration: none;
-  
+    text-decoration:none;
+}
+
+nav li a {
+    text-decoration: none;
+    color: #5C755E;
 }
 
 .heading-background {
@@ -109,4 +113,28 @@ div {
 
 .mob-pics {
   width:50%;
+}
+
+.fixed {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  
+    width: 200px;
+    border: 3px solid black;
+    background-color: white;
+
+}
+
+.fade {
+  position: fixed;
+  top:0px;
+  right:0;
+  left:0;
+  margin-left: auto;
+  margin-right:auto;
+  width:auto;
+  height:50px;
+  text-align:center;
+  background-color:#F7DCB4;
 }
