--- a/index.1.css
+++ b/index.1.css
@@ -84,17 +84,22 @@ nav li {
 }
 
 nav a:hover{
-  color: red
+  color:  #A97D5D
    ;
 }
 
-nav li a{
-  text-decoration: none;
-  color:  #0066FF;
+
+body li:hover{
+  color: #0066FF;
 }
 
 div {
-  text-decoration: none;
+    text-decoration:none;
+}
+
+nav li a {
+    text-decoration: none;
+    color: #5C755E;
   
 }
 
@@ -105,5 +110,19 @@ div {
 
 .picture {
   width:200;
+}
+
+.fade {
+  position: fixed;
+  top:0px;
+  right:0;
+  left:0;
+  top:0;
+  margin-left: auto;
+  margin-right:auto;
+  width:auto;
+  height:50px;
+  text-align:center;
+  background-color:#F7DCB4;
 }
 
