--- a/Test.css
+++ b/Test.css
@@ -8,7 +8,7 @@
 .menu-wrap {
     width:100%;
     box-shadow:0px 1px 3px rgba(0,0,0,0.2);
-    background-color:#F7DCB4;
+    background-color:#00CC66;
     position:fixed;
 }
  
@@ -25,12 +25,12 @@
  
 .menu a {
     transition:all linear 0.15s;
-    color:#006600;
+    color:#00664C;
 }
  
 .menu li:hover > a, .menu .current-item > a {
     text-decoration:none;
-    color:#996633;
+    color:#4db8b8;
 }
  
 .menu .arrow {
@@ -53,7 +53,7 @@
 }
  
 .menu > ul > li:hover > a, .menu > ul > .current-item > a {
-    background:#F7DCB4;
+    background:#00664C;
 }
  
 /*----- Bottom Level -----*/
@@ -72,7 +72,7 @@
     opacity:0;
     transition:opacity linear 0.15s;
     box-shadow:0px 2px 3px rgba(0,0,0,0.2);
-    background:#F7DCB4;
+    background:#00CC66;
 }
  
 .sub-menu li {
@@ -85,6 +85,6 @@
 }
  
 .sub-menu li a:hover, .sub-menu .current-item a {
-    background:#F7DCB4;
+    background:#00664c;
 }
 
