--- a/Videos.css
+++ b/Videos.css
@@ -62,25 +62,6 @@ nav li {
     text-align: center;
 }
 
-nav a:hover{
-  color:  #A97D5D
-   ;
-}
-
-
-body li:hover{
-  color: #0066FF;
-}
-
-div {
-    text-decoration:none;
-}
-
-nav li a {
-    text-decoration: none;
-    color: #5C755E;
-}
-
 .active {
   font-weight: 900;
 }
@@ -136,8 +117,91 @@ iframe {
   background-color:#F7DCB4;
 }
 
-.container {
-  border-style:solid;
-  border-bottom-width:500px;
-  border-color:transparent;
+.clearfix:after {
+    display:block;
+    clear:both;
+}
+ 
+/*----- Menu Outline -----*/
+.menu-wrap {
+    width:100%;
+    box-shadow:0px 1px 3px rgba(0,0,0,0.2);
+    background-color:#00CC66;
+    position:fixed;
+}
+ 
+.menu {
+    width:10000px;
+    margin:0px auto;
+
+}
+ 
+.menu li {
+    margin:0px;
+    list-style:none;
+}
+ 
+.menu a {
+    transition:all linear 0.15s;
+    color:#00664C;
+}
+ 
+.menu li:hover > a, .menu .current-item > a {
+    text-decoration:none;
+    color:#4db8b8;
+}
+ 
+.menu .arrow {
+    font-size:11px;
+    line-height:0%;
+}
+ 
+/*----- Top Level -----*/
+.menu > ul > li {
+    float:left;
+    display:inline-block;
+    position:relative;
+    font-size:19px;
+}
+ 
+.menu > ul > li > a {
+    padding:10px 40px;
+    display:inline-block;
+    text-shadow:0px 1px 0px rgba(0,0,0,0.4);
+}
+ 
+.menu > ul > li:hover > a, .menu > ul > .current-item > a {
+    background:#00664C;
+}
+ 
+/*----- Bottom Level -----*/
+.menu li:hover .sub-menu {
+    z-index:1;
+    opacity:1;
+}
+ 
+.sub-menu {
+    width:150%;
+    padding:5px 0px;
+    position:absolute;
+    top:100%;
+    left:0px;
+    z-index:-1;
+    opacity:0;
+    transition:opacity linear 0.15s;
+    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+    background:#00CC66;
+}
+ 
+.sub-menu li {
+    display:block;
+}
+ 
+.sub-menu li a {
+    padding:10px 30px;
+    display:block;
+}
+ 
+.sub-menu li a:hover, .sub-menu .current-item a {
+    background:#00664c;
 }
