--- a/css/hostile-mobs.css
+++ b/css/hostile-mobs.css
@@ -38,7 +38,7 @@ body {
   width: 400px;
 }
 
-.container {
+section {
     width: 960px;
     margin: 0 auto;
     text-decoration:none;
@@ -63,7 +63,7 @@ table {
   
 }
 tr:hover {
-  background-color: #3366FF;
+  background-color: #66FF99;
 }
 
 .active {
@@ -90,7 +90,7 @@ nav a:hover{
 
 
 body li:hover{
-  color: #0066FF;
+  color: #66FF99;
 }
 
 div {
@@ -149,6 +149,7 @@ nav li a {
     box-shadow:0px 1px 3px rgba(0,0,0,0.2);
     background-color:#00CC66;
     position:fixed;
+      opacity: 0.90;
 }
  
 .menu {
