--- a/css/videos.css
+++ b/css/videos.css
@@ -1,3 +1,10 @@
+html, body{
+  margin:0;
+  padding:0;
+
+}
+
+
 h1 {
   text-align: center;
 } 
@@ -11,9 +18,9 @@ h1 {
 }
 
 body {
-  background-image: url(http://wallpaper-download.net/wallpapers/styles/1366x768/public/game-wallpapers-minecraft-landscape-wallpaper-30781.png?itok=2cS4gY1s);
+  background-image: url("school.png");
 ;
-
+background-size: cover;
 }
 
 .catbread {
@@ -35,12 +42,17 @@ body {
   position:static;
 }
 
-.container {
+section {
     width: 960px;
     margin: 0 auto;
     text-decoration:none;
     background-image:url("http://emoticonswallpapers.com/background/pattern/background-pattern-007.jpg");
     padding: 20px;
+     border-style:solid;
+    border-color:transparent;
+    border-bottom:300px;
+    font-family:comfortaa;
+ 
 }
 .mansion {
   width: 300px
@@ -62,44 +74,61 @@ nav li {
     text-align: center;
 }
 
-nav a:hover{
-  color:  #A97D5D
-   ;
-}
-
-
-body li:hover{
-  color: #0066FF;
-}
-
-div {
-    text-decoration:none;
-}
-
-nav li a {
-    text-decoration: none;
-    color: #5C755E;
-}
-
 .active {
   font-weight: 900;
 }
 
-.fade {
-  position: fixed;
-  top:0px;
-  right:0;
-  left:0;
-  top:0;
-  margin-left: auto;
-  margin-right:auto;
-  width:auto;
-  height:50px;
-  text-align:center;
-  background-color: #F7DCB4;
+
+
+
+
+
+
+
+body {
+    background-image:url(http://wallpaper-download.net/wallpapers/styles/1366x768/public/game-wallpapers-minecraft-landscape-wallpaper-30781.png?itok=2cS4gY1s);
+     
+}
+
+.heading-background {
+  background-image: url(http://i.imgur.com/SWQZQSN.png);
+  background-size: 100px 100px;
+  
+}
+
+th, td {
+    border: 3px solid black;
+}
+
+table {
+  border-collapse:collapse;
+  
+}
+tr:hover {
+  background-color: #66FF99;
+}
+
+iframe {
+  float:left;
+}
+
+.content {
+  float:right;
 }
 
 
+.fade {
+  position: fixed;
+  top:0;
+  right:0;
+  left:0;
+  margin-left: auto;
+  margin-right:auto;
+  width:100%;
+  height:50px;
+  text-align:center;
+  background-color:#F7DCB4;
+}
 
 .clearfix:after {
     display:block;
@@ -112,6 +141,9 @@ nav li a {
     box-shadow:0px 1px 3px rgba(0,0,0,0.2);
     background-color:#00CC66;
     position:fixed;
+    opacity: 0.90;
+    top:0;
+    left:0;
 }
  
 .menu {
@@ -190,9 +222,6 @@ nav li a {
     background:#00664c;
 }
 
-.heading-background {
-  background-image: url(http://i.imgur.com/SWQZQSN.png);
-  background-size: 100px 100px;
+p {
+  font-family:"Comic Sans MS";
 }
-
-
