--- a/css/how-to-survive.css
+++ b/css/how-to-survive.css
@@ -112,7 +112,11 @@ nav li a {
     box-shadow:0px 1px 3px rgba(0,0,0,0.2);
     background-color:#00CC66;
     position:fixed;
-      opacity: 0.90;
+    opacity: 0.90;
+    top:0;
+    right:0;
+    left:0;
+  
 }
  
 .menu {
