--- a/css/how-to-survive.css
+++ b/css/how-to-survive.css
@@ -216,6 +216,7 @@ h1 {
 body {
   background-image: url(http://wallpaper-download.net/wallpapers/styles/1366x768/public/game-wallpapers-minecraft-landscape-wallpaper-30781.png?itok=2cS4gY1s);
 ;
+background-size:cover;
 
 }
 
@@ -399,3 +400,6 @@ nav li a {
 }
 
 
+.table {
+  margin: 0 auto;
+}
