--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ h1 {
 body {
   background-image:url(http://wallpaper-download.net/wallpapers/styles/1366x768/public/game-wallpapers-minecraft-landscape-wallpaper-30781.png?itok=2cS4gY1s);
 ;
+background-size:cover;
 }
 
 .catbread {
