--- a/css/where-to-go.css
+++ b/css/where-to-go.css
@@ -141,17 +141,21 @@ nav li a {
     top:0;
     right:0;
     left:0;
+    text-align:center;
+
 }
  
 .menu {
     width:10000px;
     margin:0px auto;
     background-color:blue;
+    text-alighn:center
 }
  
 .menu li {
-    margin:0px;
+    margin:0px auto;
     list-style:none;
+  
 }
  
 .menu a {
