--- a/css/hostile-mobs.css
+++ b/css/hostile-mobs.css
@@ -56,14 +56,24 @@ section {
 
 th, td {
     border: 3px solid black;
-}
 
+}
+td {
+  padding:10px;
+}
 table {
   border-collapse:collapse;
   
 }
 tr:hover {
+  /*transform: scale(1.07,1.07);*/
+  font-size:1.05em;
+  border:3px solid black;
+  zoom: 1.1;
+}
+tr:hover {
   background-color: #66FF99;
+
 }
 
 .active {
@@ -233,4 +243,13 @@ nav li a {
 
 .table {
   margin:0 auto;
+}
+
+.pic-mob {
+  margin: 0 auto;
+}
+
+.back {
+  text-decoration:none;
+  color:#00664C;
 }
