--- a/css/index.css
+++ b/css/index.css
@@ -198,4 +198,7 @@ nav li a {
 .sub-menu li a:hover, .sub-menu .current-item a {
     background:#00664c;
 }
-
+body {
+  cursor: url(http://36.media.tumblr.com/6637f047930609f1e50dba10797db93c/tumblr_mg2flhYthJ1s2q1hro1_400.png), auto;
+  
+}
