--- a/css/where-to-go.css
+++ b/css/where-to-go.css
@@ -166,6 +166,7 @@ nav li a {
 .menu li:hover > a, .menu .current-item > a {
     text-decoration:none;
     color:#4db8b8;
+    font-weight: 900;
 }
  
 .menu .arrow {
@@ -227,3 +228,8 @@ nav li a {
   margin:0 auto;
 }
 
+aside img {
+    background-color:#046380;
+    border-style:solid;
+    border-radius:50%;
+}
