--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,3 @@
-@media screen and (max-width: 450px) {
-    .menu > ul > li > a {
-    padding:1px 5px;
-    background-color: lightblue;
-    height:8;
-    font-size:75%;
-    }
-nav li {
-    display: block;
-
-}
-
-nav a:hover{
-  color: #A97D5D
-   ;
-}
-
-
-body li:hover{
-  color: #0066FF;
-}
-
-div {
-    text-decoration:none;
-}
-
-nav li a {
-    text-decoration: none;
-    color: #5C755E;
-}
-
-.active {
-  font-weight: 900;
-}
-
-.heading-background {
-  background-image: url(http://i.imgur.com/SWQZQSN.png);
-  background-size: 100px 100px;
-}
-
 .clearfix:after {
     display:block;
     clear:both;
@@ -53,13 +13,15 @@ nav li a {
     top:0;
     right:0;
     left:0;
+    margin:0;
+    height:9%;
       
 }
  
 .menu {
     width:99%;
+    margin:0px auto;
     text-align:center;
-
 }
  
 .menu li {
@@ -75,6 +37,7 @@ nav li a {
 .menu li:hover > a, .menu .current-item > a {
     text-decoration:none;
     color:#4db8b8;
+    font-weight: 900;
 }
  
 .menu .arrow {
@@ -84,17 +47,16 @@ nav li a {
  
 /*----- Top Level -----*/
 .menu > ul > li {
-    display:block;
+    /*float:left;*/
+    display:inline-block;
     position:relative;
     font-size:19px;
-
 }
  
 .menu > ul > li > a {
-    padding:10px 40px;
-    display:block;
+    padding:5px 2px;
+    display:inline-block;
     text-shadow:0px 1px 0px rgba(0,0,0,0.4);
-    
 }
  
 .menu > ul > li:hover > a, .menu > ul > .current-item > a {
@@ -108,38 +70,59 @@ nav li a {
 }
  
 .sub-menu {
-    width:90%;
+    width:150%;
     padding:5px 0px;
     position:absolute;
+    top:100%;
     left:0px;
-    z-index:-1;
+    z-index:1000;
     opacity:0;
     transition:opacity linear 0.15s;
     box-shadow:0px 2px 3px rgba(0,0,0,0.2);
     background:#00CC66;
-    
 }
  
 .sub-menu li {
-    display:inline;
+    display:block;
 }
  
 .sub-menu li a {
-    padding:10px 30px;
+    padding:10px 20px;
     display:block;
 }
  
 .sub-menu li a:hover, .sub-menu .current-item a {
     background:#00664c;
 }
-.container {
-    width:375px;
+
+#home {
+    width: 52px;
 }
-img {
-    width:50px;
+
+#survive {
+    width: 135px;
 }
-.trailer {
-    width:175;
-    height:150;
+
+#videos {
+    width:57px;
 }
+
+#mobs {
+    width:215px;
+}
+
+#food {
+    width:142px;
+}
+
+#where {
+    width:152px;
+}
+
+#help {
+    width:142px;
+}
+
+#slideshow {
+    width:144px;
 }
