--- a/css/how-to-survive.css
+++ b/css/how-to-survive.css
@@ -10,10 +10,14 @@ h1 {
   width: 100px;
 }
 
-body {
-  background-image: url(http://wallpaper-download.net/wallpapers/styles/1366x768/public/game-wallpapers-minecraft-landscape-wallpaper-30781.png?itok=2cS4gY1s);
-;
+body, html {
+  height: 100%;
+}
 
+body {
+  background-image:url(http://wallpaper-download.net/wallpapers/styles/1366x768/public/game-wallpapers-minecraft-landscape-wallpaper-30781.png?itok=2cS4gY1s);
+  background-size:cover;
+  background-repeat:no-repeat;
 }
 
 .catbread {
